[tool.poetry]
name = "dijkstra-bgl"
version = "0.2.0"
description = ""
authors = ["Simon Boivin <sboivin@systra.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pybind11 = "^3.0.1"


[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=3.0.0"]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
# Which architectures to build for (e.g., x86_64, aarch64)
archs = ["auto"]

# Exclude some older or less common Python versions
#skip = ["cp36-*", "cp37-*", "cp38-*", "cp39-*", "pp*", "*-musllinux*"]

build = ["cp312-*"]
