[tool.poetry]
name = "fast_dijkstra"           # Must match setup.py extension name
version = "1.0.1"
authors = ["Simon Boivin <sboivin@systra.com>"]
description = "Fast Dijkstra using Boost Graph Library"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pybind11 = "^3.0.1"
twine = "^6.2.0"


[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=3.0.0"]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
# Which architectures to build for (e.g., x86_64, aarch64)
archs = ["auto"]

# Exclude some older or less common Python versions
#skip = ["cp36-*", "cp37-*", "cp38-*", "cp39-*", "pp*", "*-musllinux*"]
skip = ["*-musllinux*"]

build = ["cp312-*"]
